--- a/netlify.toml
+++ b/netlify.toml
@@ -3,14 +3,14 @@
   publish   = "liff"
   functions = "functions"
 
-# 2) ローカル開発 (netlify dev) 設定
+# 2) ローカル開発（netlify dev）設定
 [dev]
   publish   = "liff"
   functions = "functions"
 
-# 3) Functions ビルド設定
-[functions]
-  external_node_modules = [
-    "@supabase/supabase-js",
-    "@line/bot-sdk",
-  ]
+# 3) Functions 外のすべてを index.html（SPA）にフォールバック
+[[redirects]]
+  from   = "/*"
+  to     = "/index.html"
+  status = 200
+  force  = true
